[project]
name = "planetary-comp-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-storage-blob>=1.3.1",
    "bokeh>=3.6.2",
    "dask-cuda>=24.12.0",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "planetary-computer>=1.0.0",
    "pynvml>=11.4.1",
    "pystac-client>=0.8.5",
    "rioxarray>=0.18.1",
    "segmentation-models-pytorch>=0.3.4",
    "stac-vrt>=1.0.3",
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "xarray>=2024.11.0",
]
